# assistant

./: .dockerignore  .env.example  .gitignore  .gitlab-ci.yml  CLAUDE.md  Dockerfile  docker-compose.yml  justfile  main.py  pyproject.toml
.github/scripts/: llm-review.js
.github/workflows/: deploy.yml
app/: __init__.py  config.py  constants.py  main.py
app/google/: auth.py  calendar.py  tasks.py
internal/core/: Dockerfile  docker-compose.yml  pyproject.toml
internal/core/core/: config.py  constants.py  main.py
internal/core/core/google/auth/: __init__.py
internal/core/core/handlers/http_handler/: __init__.py  dto.py  http_handler.py
internal/core/core/handlers/telegram_handler/: __init__.py  dto.py  summary_handler.py  telegram_handler.py
internal/core/core/llm/: client.py  retry.py  transcription.py
internal/core/core/mcp_client/: manager.py
internal/core/core/repository/conversation_repo/: __init__.py  conversation_repo.py  dto.py
internal/core/core/repository/google_auth_repo/: __init__.py  dto.py  google_auth_repo.py
internal/core/core/repository/llm_repo/: __init__.py  dto.py  llm_repo.py
internal/core/core/repository/mcp_repo/: __init__.py  dto.py  mcp_repo.py
internal/core/core/scheduler/: watcher_scheduler.py
internal/core/core/services/auth_service/: __init__.py  auth_service.py  dto.py
internal/core/core/services/chat_service/: __init__.py  chat_service.py  dto.py
internal/core/core/services/summary_service/: __init__.py  dto.py  summary_service.py
internal/core/core/services/tool_registry/: __init__.py  dto.py  tool_registry.py
internal/core/core/services/transcription_service/: __init__.py  dto.py  transcription_service.py
internal/core/core/services/watcher_service/: __init__.py  dto.py  watcher_service.py
internal/core/core/telegram/: bot.py  handlers.py
internal/core/core/tools/: base.py  respond_to_user.py
internal/mcp/google/: Dockerfile  docker-compose.yml  pyproject.toml
internal/mcp/google/mcp_google/: config.py  container.py  server.py
internal/mcp/google/mcp_google/google/: auth.py  calendar.py
internal/mcp/google/mcp_google/handlers/: __init__.py  calendar_handler.py  tasks_handler.py
internal/mcp/google/mcp_google/repository/auth_repo/: __init__.py  auth_repo.py
internal/mcp/google/mcp_google/services/calendar_service/: __init__.py  calendar_service.py
internal/mcp/google/mcp_google/services/tasks_service/: __init__.py  tasks_service.py
internal/mcp/summaries/: Dockerfile  docker-compose.yml  pyproject.toml
internal/mcp/summaries/mcp_summaries/: config.py  container.py  server.py  summary_generator.py  telethon_service.py
internal/mcp/summaries/mcp_summaries/handlers/: __init__.py  auth_handler.py  channel_handler.py  summary_handler.py  watcher_handler.py
internal/mcp/summaries/mcp_summaries/repository/telethon_repo/: __init__.py  telethon_repo.py
internal/mcp/summaries/mcp_summaries/services/auth_service/: __init__.py  auth_service.py
internal/mcp/summaries/mcp_summaries/services/summary_service/: __init__.py  summary_service.py
internal/mcp/summaries/mcp_summaries/storage/: summary_groups.py  watchers.py
pkg/: pyproject.toml
pkg/pkg/: constants.py  redis_client.py  summary_group_storage.py  token_storage.py  watcher_storage.py
(+33 files in other folders)
