[project]
name = "assistant-monorepo"
version = "0.1.0"
description = "Telegram bot monorepo with MCP microservices architecture"
readme = "README.md"
requires-python = ">=3.13"
# Dependencies are managed per-module in:
# - pkg/pyproject.toml
# - internal/core/pyproject.toml
# - internal/mcp/google/pyproject.toml
# - internal/mcp/summaries/pyproject.toml
dependencies = []

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
