[project]
name = "assistant-pkg"
version = "0.1.0"
requires-python = ">=3.13"
dependencies = [
    "redis>=5.0.0",
    "pydantic-settings>=2.5.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["pkg"]

[dependency-groups]
dev = [
    "ruff>=0.15.0",
]
