[project]
name = "assistant-core"
version = "0.1.0"
description = "Core Telegram bot with MCP integration"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "aiogram>=3.13.0",
    "google-api-python-client>=2.150.0",
    "google-auth-oauthlib>=1.2.0",
    "openai>=1.50.0",
    "pydantic-settings>=2.5.0",
    "redis>=5.0.0",
    "mcp>=1.0.0",
    "httpx>=0.27.0",
    "aiofiles>=24.1.0",
    "tzdata>=2025.3",
    "langfuse>=3.12.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["core"]
