[project]
name = "mcp-summaries"
version = "0.1.0"
requires-python = ">=3.13"
dependencies = [
    "mcp[cli]>=1.0.0",
    "telethon>=1.36.0",
    "openai>=1.50.0",
    "langfuse>=3.12.0",
    "redis>=5.0.0",
    "pydantic-settings>=2.5.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "ruff>=0.15.0",
]
